# codeshelf

./: .dockerignore  .gitattributes  .gitignore  API.md  BUILD.md  DEVELOPMENT.md  README.md  RELEASE_NOTES.md  TITLEBAR.md  example-addClass.html  example-addproject.html  example.html  package-lock.json  package.json  vite.config.ts  更新步骤说明.md
.github/workflows/: release.yml
doc/: 20260519-01-resume-deepagents.md
docs/: 20260318-01-AI供应商模块PRD.md  20260318-02-AI供应商模块需求补充说明.md  20260519-01-resume-deepagents.md  20260519-01-简历生成DeepAgents重构基线.md  API.md  CHAT-DESIGN.md  CHAT-TOOLS-DESIGN.md  MCP-GATEWAY.md  软件需求文档.md
docs/example/: example-addproject.html  example-projectPanel.html  example-scanGitProject.html
public/: claude-config-templates.json
scripts/: Dockerfile.win-check  extract_old_data.bat  extract_old_data.ps1  generate-icons.bat  generate-icons.sh  prepare-resume-agent-sidecar.mjs  release.bat  release.sh  verify-release.sh
src/: App.tsx  bindings.ts  main.tsx
src-node/prompt/: 简历分析助手.md  背景知识提示词.md  项目经历提示词.md
src-node/resume-agent/: package.json
src-node/resume-agent/src/: main.ts  rpc.ts  types.ts  util.ts
src-tauri/: Cargo.toml  nsis-hooks.nsi  tauri.conf.json  tauri.portable.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  global-shortcut.json
src-tauri/src/: app_setup.rs  error.rs  handlers.rs  keyboard_hook.rs  lib.rs  main.rs  mcp_gateway.rs
src-tauri/src/commands/: api_chat.rs  chat.rs  chat_bridge.rs  extras.rs  eye.rs  git.rs  mod.rs  project.rs  resume.rs  resume_docx.rs  resume_node_agent.rs  settings.rs  stats.rs  storage_admin.rs  system.rs  tools.rs  workflows.rs
src-tauri/src/commands/api_chat/: endpoints.rs  execute.rs  groups.rs  mod.rs  sessions.rs  tools.rs
src-tauri/src/commands/git/: branches.rs  clone.rs  commits.rs  mod.rs  remotes.rs  scan.rs  staging.rs  status.rs
src-tauri/src/commands/resume_agent/: knowledge_agent.rs  llm.rs  mod.rs  quality_check.rs  resume_agent.rs  types.rs  virtual_fs.rs
src-tauri/src/commands/toolbox/: claude_code.rs  clipboard.rs  docker.rs  downloader.rs  forwarder.rs  mod.rs  process.rs  scanner.rs  server.rs  shortcuts.rs  ssh_tunnel.rs
src-tauri/src/commands/toolbox/claude_code/: cache.rs  config_io.rs  detect.rs  launch.rs  mod.rs  profiles.rs  quick_config.rs
src-tauri/src/commands/toolbox/docker/: ai.rs  commands.rs  mod.rs  templates.rs  types.rs  utils.rs
src-tauri/src/commands/toolbox/netcat/: mod.rs  tcp_client.rs  tcp_server.rs  types.rs  udp.rs
src-tauri/src/commands/toolbox/pairdrop/: assets.rs  commands.rs  mod.rs  runtime.rs  state.rs
src-tauri/src/commands/toolbox/pairdrop/assets/: index.html
src-tauri/src/commands/toolbox/server/: crud.rs  mod.rs  nginx.rs  runtime.rs
src-tauri/src/commands/toolbox/ssh_tunnel/: auth.rs  commands.rs  mod.rs  port_test.rs  runtime.rs
src-tauri/src/commands/tools/: ctx.rs  file_ops.rs  fs_ops.rs  mod.rs  os_open.rs  schema.rs  shell.rs  tasks.rs  web_fetch.rs
src-tauri/src/storage/: config.rs  db.rs  migration.rs  mod.rs  schema.rs
src-tauri/src/storage/migrations/: mod.rs  v1_from_json.rs  v1_initial.sql
src/components/common/: ConfirmDialog.tsx  CopyButton.tsx  Dialog.tsx  EmptyState.tsx  LoadingSpinner.tsx  Modal.tsx  PageHeader.tsx  SearchInput.tsx  index.ts  useConfirm.tsx  zIndex.ts
src/components/cron/: CronBuilder.tsx  cronExpr.ts  index.ts
src/components/layout/: MacWindowControls.tsx  MainLayout.tsx  Sidebar.tsx  TitleBar.tsx  index.ts
src/components/project/: AddCategoryDialog.tsx  AddProjectDialog.tsx  AddRemoteModal.tsx  BranchSwitchModal.tsx  CategorySelector.tsx  ClaudeEnvSelector.tsx  DeleteConfirmDialog.tsx  EditorContextMenu.tsx  GitCommitModal.tsx  LabelSelector.tsx  MarkdownRenderer.tsx  ProjectCard.tsx  ProjectDetailDialog.tsx  ProjectDetailPanel.tsx  ProjectQuickActions.tsx  ReadmeSection.tsx  (+5 more)
src/config/: defaultSensitiveFilePatterns.json
src/hooks/: useAppShortcuts.ts  useAsyncLoad.ts  useClickOutside.ts  useCopyToClipboard.ts  useLocalStorageState.ts  useMcpEndpointLookup.ts
src/services/: api_chat.ts  workflows.ts
src/shims/: async-hooks-shim.js  child-process-empty.js  fs-empty.js  fs-promises-empty.js  node-crypto-shim.js  process-init.js
src/stores/: _persistence.ts  aiProvidersStore.ts  appStore.ts  editorsStore.ts  navigation.ts  notificationsStore.ts  projectsStore.ts  resumeStore.ts  settingsStore.ts  uiStore.ts
src/styles/: base.css  commits.css  dark-theme.css  editor.css  git-detail.css  index.css  modal.css  project-detail.css  shelf.css
src/types/: index.ts  resume.ts  toolbox.ts
src/utils/: editor.ts  platform.ts
(+223 files in other folders)
