[package]
name = "codeshelf"
version = "0.1.15"
description = "代码书架 - 本地项目管理工具"
authors = ["tan"]
license = " Apache License 2.0"
repository = "https://github.com/en-o/codeshelf"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "codeshelf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tokio = { version = "1", features = ["full", "time", "sync"] }
once_cell = "1.19"
chrono = "0.4"
dirs = "5"

# 工具箱模块依赖
futures = "0.3"
reqwest = { version = "0.12", features = ["stream"] }
url = "2.5"
urlencoding = "2.1"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "fs", "trace"] }
sysinfo = "0.30"
socket2 = "0.5"
base64 = "0.22"

